gitops/apps/network-speedtest/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openspeedtest
  namespace: network-speedtest
  labels:
    app.kubernetes.io/name: openspeedtest
    app.kubernetes.io/part-of: network-speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openspeedtest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openspeedtest
        app.kubernetes.io/part-of: network-speedtest
    spec:
      containers:
        - name: openspeedtest
          image: openspeedtest/latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 20
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            failureThreshold: 24
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "2"
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  namespace: network-speedtest
  labels:
    app.kubernetes.io/name: openspeedtest
    app.kubernetes.io/part-of: network-speedtest
spec:
  selector:
    app.kubernetes.io/name: openspeedtest
  ports:
    - name: http
      port: 80
      targetPort: http
